syntax = "proto3";

package com.itrjp.im.proto;
option java_multiple_files = true;

service DispatchService{
  // 上线
  rpc online(OnlineRequest) returns (DispatchResponse) {}
  // 下线
  rpc offline(OfflineRequest) returns (DispatchResponse) {}

  rpc getConnectInfo(GetConnectInfoRequest) returns (GetConnectInfoResponse) {}
}

message OnlineRequest{
  string channelId = 1; // 频道ID
  string userId = 2; // 用户ID
  string sessionId = 3; // sessionId
  string nodeId = 4;
}
message OfflineRequest{
  string channelId = 1; // 频道ID
  string userId = 2; // 用户ID
  string sessionId = 3; // sessionId
  string nodeId = 4;
}

message GetConnectInfoRequest{
  string channelId = 1; //频道ID
}
message GetConnectInfoResponse{
  string host = 1;
}

message DispatchResponse{
  int32 code = 1;
  string message = 2;
  int64 users = 3;
}
